--- a/style_header.css
+++ b/style_header.css
@@ -122,14 +122,17 @@ a:hover {background: rgba(255,255,255,.2);}
 
 @media (max-width: 1080px){
     .menu{ display: none; 
-    margin-top: 15px;
-    font-size: 80%;}
+    margin-top: 15px;}
     .menu_icon{ display: flex;}
     .open_icon_menu .menu { display: flex;
     flex-direction: column;}
     .menu a{ margin-left: 0;}
     .menu a{ margin-right: 0;}
-    h1{font-size: 95%;
-    margin-bottom: 10px;}
+    h1{margin-bottom: 10px;}
     .gallery img{height: 70px;}
+}
+
+@media (max-width: 1020px){
+    .menu{ font-size: 80%;}
+    h1{font-size: 95%;}
 }
