--- a/style_init.css
+++ b/style_init.css
@@ -213,6 +213,8 @@ h2{
     margin-bottom: 10px;
     padding-top: 5px;
     padding-bottom: 5px;}
+}
+@media (max-width: 1020px){
     h2{font-size: 90%;}
     p{ font-size: 80%;}
 }
